--- a/src/app/server/login/login.component.html
+++ b/src/app/server/login/login.component.html
@@ -16,11 +16,13 @@
           fxLayout='column'
           fxLayoutAlign='center'>
           <mat-form-field class='item item-1' fxFlex='70%'>
-            <input matInput type='text' placeholder='Username' [(ngModel)]='loginForm.username' name='username' required>
+            <mat-label>Username</mat-label>
+            <input matInput type='text' [(ngModel)]='loginForm.username' name='username' required>
           </mat-form-field>
           <br>
           <mat-form-field class='item item-2' fxFlex='70%'>
-            <input matInput type='password' placeholder='Password' [(ngModel)]='loginForm.password' name='password' required>
+            <mat-label>Password</mat-label>
+            <input matInput type='password' [(ngModel)]='loginForm.password' name='password' required>
           </mat-form-field>
           <br>
           <button mat-raised-button class='item item-3' fxFlex='70%' type='submit' color='primary'>Login</button>
