--- a/src/app/server/ss-items/ss-items.component.html
+++ b/src/app/server/ss-items/ss-items.component.html
@@ -1,3 +1,74 @@
-<p>
-  ss-items works!
-</p>
+<div class='container' fxLayout fxLayout.xs='column' fxLayoutAlign='center' style='margin-top: 30px'>
+  <div class='item item-1' fxFlex='5%'></div>
+  <div class='item item-2' fxFlex='90%'>
+    <mat-card color='primary'>
+      <mat-card-header>
+        <mat-card-title>Items List</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <div class='container' fxLayout fxLayout.xs='column' fxLayout='column' fxLayoutAlign='center' fxLayoutGap='20px'>
+          <div class='item item-1' fxFlex='100%'>
+            <div class='container' fxLayout fxLayout.xs='row' fxLayoutAlign='left' fxLayoutGap='20px'>
+              <mat-form-field class='item item-1' fxFlex='30%'>
+                <mat-label>Select Product</mat-label>
+                <mat-select [(ngModel)]='searchParam.prod' name='category'>
+                  <mat-option *ngFor='let prod of products' [value]='prod.value' (click)="changeSubCatVal(searchParam)">{{ prod.viewVal }}</mat-option>
+                </mat-select>
+              </mat-form-field>
+              <mat-form-field class='item item-2' fxFlex='30%'>
+                <mat-label>Select category</mat-label>
+                <mat-select [(ngModel)]='searchParam.cat' name='category'>
+                  <mat-option *ngFor='let sc of subCat' [value]='sc.value'>{{ sc.viewVal }}</mat-option>
+                </mat-select>
+              </mat-form-field>
+              <button mat-raised-button type='button' class='item item-3' fxFlex='30%' color='primary' (click)='search($event, searchParam)'><mat-icon>search</mat-icon>Search</button>
+            </div>
+          </div>
+          <div class='item item-2' fxFlex='100%'>
+            <div class='container' fxLayout fxLayout.xs='row' fxLayoutAlign='left' fxLayoutGap='20px'>
+              <button mat-raised-button class='item item-1' (click)='mdAddItem()'><mat-icon>add</mat-icon>Add item</button>
+            </div>
+          </div>
+          <div class='item item-3' fxFlex='100%'>
+            <div class='container' fxLayout fxLayout.xs='column' fxLayout='column' fxLayoutAlign='center' fxLayoutGap='20px'>
+              <div class='item item-1' fxFlex='60%' style='text-align:center'>
+                <mat-paginator [pageSizeOptions]='[5, 10, 15]' showFirstLastButtons></mat-paginator>
+              </div>
+              <div class='item item-1 table-con' fxFlex='100%'>
+                <table mat-table class='mat-elevation-z4' [dataSource]='itemsTable' width='900px'>
+                  <ng-container matColumnDef='name'>
+                    <th mat-header-cell *matHeaderCellDef>Name</th>
+                    <td mat-cell *matCellDef='let data'>{{ data.name }}</td>
+                  </ng-container>
+                  <ng-container matColumnDef='img'>
+                    <th mat-header-cell *matHeaderCellDef>Image</th>
+                    <td mat-cell *matCellDef='let data'><img [src]='data.img | imageData' width='70px' height='70px'></td>
+                  </ng-container>
+                  <ng-container matColumnDef='color'>
+                    <th mat-header-cell *matHeaderCellDef>Color</th>
+                    <td mat-cell *matCellDef='let data'>{{ data.color }}</td>
+                  </ng-container>
+                  <ng-container matColumnDef='description'>
+                    <th mat-header-cell *matHeaderCellDef>Description</th>
+                    <td mat-cell *matCellDef='let data'><p [innerHTML]='data.description'></p></td>
+                  </ng-container>
+                  <ng-container matColumnDef='price'>
+                    <th mat-header-cell *matHeaderCellDef>Price</th>
+                    <td mat-cell *matCellDef='let data'>{{ data.price }}</td>
+                  </ng-container>
+                  <ng-container matColumnDef='itemCount'>
+                    <th mat-header-cell *matHeaderCellDef>Item Count</th>
+                    <td mat-cell *matCellDef='let data'>{{ data.itemCount }}</td>
+                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef='tableHeader'></tr>
+                  <tr mat-row *matRowDef='let row; columns: tableHeader'></tr>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <div class='item item-3' fxFlex='5%'></div>
+</div>
