Server side panel for testing; WIP: Viewers web site

--- a/src/app/client/cs-services/cs-services.component.html
+++ b/src/app/client/cs-services/cs-services.component.html
@@ -1,12 +1,9 @@
 <div class='container' fxLayout fxLayout.xs='column' fxLayoutAlign='center' fxLayoutGap='20px' style='margin-top: 30px'>
   <div class='item item-1' fxFlex='5%'></div>
-  <div class='item item-2' fxFlex='45%' style='text-align: center'>
-    <img src='../assets/logo.png' width='300px' height='300px'>
-  </div>
-  <div class='item item-3' fxFlex='45%'>
+  <div class='item item-2' fxFlex='90%'>
     <mat-card>
       <mat-card-header>
-        <mat-card-title>Information</mat-card-title>
+        <mat-card-title>Services Offered</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <p class='indent'>
@@ -14,18 +11,6 @@
           Sed scripta aliquid ea, id mnesarchum efficiantur comprehensam ius. Suscipit intellegam vix no, ius vocent lobortis an. Eos ad aeque ludus hendrerit. Sale falli nostrum mea an, decore persius scripserit vim ad.
         </p>
       </mat-card-content>
-    </mat-card>
-  </div>
-  <div class='item item-4' fxFlex='5%'></div>
-</div>
-<div class='container' fxLayout fxLayout.xs='column' fxLayoutAlign='center' fxLayoutGap='20px' style='margin-top: 30px'>
-  <div class='item item-1' fxFlex='5%'></div>
-  <div class='item item-2' fxFlex='90%'>
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>Home</mat-card-title>
-      </mat-card-header>
-      <mat-card-content></mat-card-content>
     </mat-card>
   </div>
   <div class='item item-3' fxFlex='5%'></div>
