--- a/src/app/server/admin-nav/admin-nav.component.html
+++ b/src/app/server/admin-nav/admin-nav.component.html
@@ -1,18 +1,13 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
+  <mat-sidenav #drawer class="sidenav" fixedInViewport="false"
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="!(isHandset$ | async)">
-      <mat-toolbar class='centerTxt'>
-        <p>Green Planet</p>
-      </mat-toolbar>
+      <div class='centerTxt'><img src='../assets/logo.png' class='navImg'></div>
       <mat-toolbar class='centerTxt'>
         <p class='accName'>{{ acctName }}</p>
       </mat-toolbar>
     <mat-nav-list>
-      <!-- <a mat-list-item routerLink="#">Link 1</a>
-      <a mat-list-item routerLink="#">Link 2</a>
-      <a mat-list-item routerLink="#">Link 3</a> -->
       <a mat-list-item *ngFor='let ls of navLs' routerLink='{{ ls.path }}'><mat-icon>{{ ls.ic }}</mat-icon>&nbsp;&nbsp;{{ ls.name }}</a>
       <a mat-list-item *ngIf='checkAcctType()' routerLink='add-acct'><mat-icon>person_add</mat-icon>&nbsp;&nbsp;Add Account</a>
       <a mat-list-item (click)='logOut()'><mat-icon>power_settings_new</mat-icon>&nbsp;&nbsp;Logout</a>
