--- a/src/app/server/ss-items/ss-items.component.html
+++ b/src/app/server/ss-items/ss-items.component.html
@@ -1,7 +1,7 @@
 <div class='container' fxLayout fxLayout.xs='column' fxLayoutAlign='center' style='margin-top: 30px'>
   <div class='item item-1' fxFlex='5%'></div>
   <div class='item item-2' fxFlex='90%'>
-    <mat-card color='primary'>
+    <mat-card>
       <mat-card-header>
         <mat-card-title>Items List</mat-card-title>
       </mat-card-header>
@@ -35,7 +35,7 @@
                 <mat-paginator [pageSizeOptions]='[5, 10, 15]' showFirstLastButtons></mat-paginator>
               </div>
               <div class='item item-1 table-con' fxFlex='100%'>
-                <table mat-table class='mat-elevation-z4' [dataSource]='itemsTable' width='900px'>
+                <table mat-table class='mat-elevation-z4' [dataSource]='itemsTable' width='900px' >
                   <ng-container matColumnDef='name'>
                     <th mat-header-cell *matHeaderCellDef>Name</th>
                     <td mat-cell *matCellDef='let data'>{{ data.name }}</td>
@@ -59,6 +59,14 @@
                   <ng-container matColumnDef='itemCount'>
                     <th mat-header-cell *matHeaderCellDef>Item Count</th>
                     <td mat-cell *matCellDef='let data'>{{ data.itemCount }}</td>
+                  </ng-container>
+                  <ng-container matColumnDef='availability'>
+                    <th mat-header-cell *matHeaderCellDef>Availability</th>
+                    <td mat-cell *matCellDef='let data'><mat-checkbox [(ngModel)]='data.availability' (change)="changeAvailability(data)" disabled></mat-checkbox></td>
+                  </ng-container>
+                  <ng-container matColumnDef='action'>
+                    <th mat-header-cell *matHeaderCellDef>Update Item</th>
+                    <td mat-cell *matCellDef='let data'><button mat-button (click)="updateItem(data)"><mat-icon>update</mat-icon></button></td>
                   </ng-container>
                   <tr mat-header-row *matHeaderRowDef='tableHeader'></tr>
                   <tr mat-row *matRowDef='let row; columns: tableHeader'></tr>
