--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,3 +59,19 @@ body { margin: 0;  font-family: 'CenturyGothic' !important;}
 .mat-expansion-panel-content > .mat-expansion-panel-body {
   padding: 0 !important;
 }
+
+.nav-con {
+	width: 80%;
+	margin: 0 auto;
+	padding: 1.3em;
+	display: grid;
+	grid-template-columns: 30% auto;
+	a {
+		color: white;
+		text-decoration: none;
+	}
+}
+
+p.indent {
+	text-indent: 50px;
+}
