--- a/src/app/server/ss-items/item/item.component.html
+++ b/src/app/server/ss-items/item/item.component.html
@@ -34,7 +34,7 @@
         <div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='left' fxLayoutGap='20px'>
           <mat-form-field class='item item-1' fxFlex='30%'>
             <mat-label>Item count</mat-label>
-            <input matInput type='number' [(ngModel)]='itemInf.itemCount' name='itemCount'>
+            <input matInput type='number' [(ngModel)]='itemInf.itemCount' name='itemCount' [disabled]='checkType()'>
           </mat-form-field>
           <mat-form-field class='item item-2' fxFlex='30%'>
             <mat-label>Price</mat-label>
