--- a/src/app/server/ss-daily-sales/ss-daily-sales.component.html
+++ b/src/app/server/ss-daily-sales/ss-daily-sales.component.html
@@ -1,85 +1,11 @@
-<div class='container' fxLayout fxLayout.xs='column' fxLayoutAlign='center' style='margin-top: 30px'>
+<div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='center' style='margin-top: 30px'>
   <div class='item item-1' fxFlex='5%'></div>
-  <div class='item item-2' fxFlex='90%'>
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>Add Sales</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <div class='container' fxLayout fxLayout.xs='column' fxLayout='column' fxLayoutAlign='center' fxLayoutGap='20px'>
-          <div class='item item-1' fxFlex='100%'>
-            <div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='left' fxLayoutGap='20px'>
-              <mat-form-field class='item item-1' fxFlex='50%'>
-                <mat-label>Enter product name</mat-label>
-                <input matInput type='text' [(ngModel)]='name'>
-              </mat-form-field>
-              <button mat-raised-button type='button' class='item item-2' fxFlex='30%' color='primary' (click)='search($event, itemInf)'><mat-icon>search</mat-icon>Search</button>
-            </div>
-          </div>
-          <div class='item item-2 table-con' fxFlex='100%'>
-            <table mat-table class='mat-elevation-z4' [dataSource]='itemsLs' width='900px'>
-              <ng-container matColumnDef='name'>
-                <th mat-header-cell *matHeaderCellDef>Name</th>
-                <td mat-cell *matCellDef='let data'>{{ data.name }}</td>
-              </ng-container>
-              <ng-container matColumnDef='img'>
-                <th mat-header-cell *matHeaderCellDef>Image</th>
-                <td mat-cell *matCellDef='let data'><img [src]='data.img | imageData' width='70px' height='70px'></td>
-              </ng-container>
-              <ng-container matColumnDef='color'>
-                <th mat-header-cell *matHeaderCellDef>Color</th>
-                <td mat-cell *matCellDef='let data'>{{ data.color }}</td>
-              </ng-container>
-              <ng-container matColumnDef='description'>
-                <th mat-header-cell *matHeaderCellDef>Description</th>
-                <td mat-cell *matCellDef='let data'><p [innerHTML]='data.description'></p></td>
-              </ng-container>
-              <ng-container matColumnDef='price'>
-                <th mat-header-cell *matHeaderCellDef>Price</th>
-                <td mat-cell *matCellDef='let data'>{{ data.price }}</td>
-              </ng-container>
-              <ng-container matColumnDef='itemCount'>
-                <th mat-header-cell *matHeaderCellDef>Item Count</th>
-                <td mat-cell *matCellDef='let data'>{{ data.itemCount }}</td>
-              </ng-container>
-              <tr mat-header-row *matHeaderRowDef='tableHeader'></tr>
-              <tr mat-row *matRowDef='let row; columns: tableHeader' (click)="tableRowSelected(row)" [style.background]="selectedRow.indexOf(row) != -1 ? 'lightblue' : ''" class='infoTble'></tr>
-            </table>
-          </div>
-          <hr>
-          <div class='item item-3' fxFlex='100%'>
-            <div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='left' fxLayoutGap='20px'>
-              <mat-form-field class='item item-1' fxFlex='50%'>
-                <mat-label>Enter amount sold</mat-label>
-                <input matInput type='number' [(ngModel)]='itemInf.amount' (keyup)='compute(itemInf)'>
-              </mat-form-field>
-              <mat-form-field class='item item-2' fxFlex='50%'>
-                <mat-label>Current item in store</mat-label>
-                <input matInput type='text' [(ngModel)]='itemInf.currItem' disabled>
-              </mat-form-field>
-              <mat-form-field class='item item-3' fxFlex='50%'>
-                <mat-label>Remaining items</mat-label>
-                <input matInput type='text' [(ngModel)]='itemInf.remainingItem' disabled>
-              </mat-form-field>
-            </div>
-            <div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='left' fxLayoutGap='20px'>
-              <mat-form-field class='item item-1' fxFlex='50%'>
-                <mat-label>Price per piece</mat-label>
-                <input matInput type='text' [(ngModel)]='itemInf.price' disabled>
-              </mat-form-field>
-              <mat-form-field class='item item-2' fxFlex='50%'>
-                <mat-label>Total Price</mat-label>
-                <input matInput type='text' [(ngModel)]='itemInf.totalPrice' disabled>
-              </mat-form-field>
-            </div>
-            <div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='center' fxLayoutGap='20px'>
-              <button class='item item-1' fxFlex='40%' mat-raised-button color='primary' (click)='add(itemInf)'><mat-icon>check</mat-icon>&nbsp;Add</button>
-              <button class='item item-2' fxFlex='40%' mat-raised-button color='warn' (click)='clear()'><mat-icon>cancel</mat-icon>&nbsp;Clear</button>
-            </div>
-          </div>
-        </div>
-      </mat-card-content>
-    </mat-card>
+  <div class='item item-2' fxFlex='42%'>
+    <button mat-raised-button color='primary' style='width: 100%; height: 100%' routerLink='add'>Add sale</button>
   </div>
-  <div class='item item-3' fxFlex='5%'></div>
+  <div class='item item-3' fxFlex='1%'></div>
+  <div class='item item-4' fxFlex='42%'>
+    <button mat-raised-button color='primary' style='width: 100%; height: 100%' routerLink='receive'>Receive items</button>
+  </div>
+  <div class='item item-5' fxFlex='5%'></div>
 </div>
