--- a/src/app/client/cs-services/cs-services.component.html
+++ b/src/app/client/cs-services/cs-services.component.html
@@ -3,13 +3,10 @@
   <div class='item item-2' fxFlex='90%'>
     <mat-card>
       <mat-card-header>
-        <mat-card-title>Services Offered</mat-card-title>
+        <mat-card-title>Services Offered (Under Construction)</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <p class='indent'>
-          Lorem ipsum dolor sit amet, inermis platonem qualisque ex pro, unum cetero sanctus vel no. Postea ceteros quo id. Debet alienum lucilius usu ei. Mei ei suas elitr incorrupte, eos at summo saepe, te accusata posidonium sea. Te eos elit probatus interpretaris, vidisse minimum quaestio ei has.
-          Sed scripta aliquid ea, id mnesarchum efficiantur comprehensam ius. Suscipit intellegam vix no, ius vocent lobortis an. Eos ad aeque ludus hendrerit. Sale falli nostrum mea an, decore persius scripserit vim ad.
-        </p>
+
       </mat-card-content>
     </mat-card>
   </div>
