--- a/src/app/server/dashboard/dashboard.component.html
+++ b/src/app/server/dashboard/dashboard.component.html
@@ -38,8 +38,19 @@
             </div>
           </div>
         </div>
+        <div class='container' fxLayout fxLayout.xs='column' fxLayout.sm='column' fxLayout='column' fxLayoutAlign='center' fxLayoutGap.xs='20px'>
+          <div clas='item item-1' fxFLex='100%'>
+            <div class='container' fxLayout fxLayout='column' fxLayoutAlign='center' fxLayoutGap.xs='20px'>
+              <div class='item item-1' fxFlex='100%'>
+                <canvas #income style='width:50%; height:70%'></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
       </mat-card-content>
     </mat-card>
   </div>
   <div class='item item-3' fxFlex='5%'></div>
 </div>
+
+<!-- <canvas #income style='width:100%; height:100%'></canvas> -->
