--- a/src/app/server/login/login.component.html
+++ b/src/app/server/login/login.component.html
@@ -10,7 +10,7 @@
       <mat-card-title>Login</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <form (ngSubmit)='login(loginForm)'>
+      <form (ngSubmit)='login(loginForm, $event)'>
         <div
           class='containerX'
           fxLayout='column'
