--- a/src/app/client/cs-home/cs-home.component.scss
+++ b/src/app/client/cs-home/cs-home.component.scss
@@ -10,6 +10,10 @@
   background: rgba(0, 0, 0, 0.57);
   color: #fff;
   padding: 0.5em;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .feat-bg {
